fix date field appearance on iOS

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -57,6 +57,8 @@ input[type="week"] {
 // centers date input text for mobile browsers
 input[type="date"] {
   padding: 1.25em 1em; 
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 legend {
